fix: Global drawers layout and z-indexes

--- a/src/app-layout/constants.scss
+++ b/src/app-layout/constants.scss
@@ -26,8 +26,7 @@ $dashboard-content-widths: (
 );
 
 // should be above sticky notifications
-$drawer-z-index: 850;
-$drawer-z-index-last-opened: 851;
+$drawer-z-index: 830;
 // should be above mobile toolbar
 $drawer-z-index-mobile: 1001;
 
