--- a/src/app-layout/visual-refresh-toolbar/drawer/styles.scss
+++ b/src/app-layout/visual-refresh-toolbar/drawer/styles.scss
@@ -34,21 +34,20 @@
   pointer-events: auto;
   word-wrap: break-word;
 
-  @include mobile-only {
-    position: absolute;
-    inset-block-start: 0;
-    inset-inline-start: 0;
-    inline-size: 100%;
-  }
-
   &.last-opened {
-    z-index: constants.$drawer-z-index-last-opened;
+    @include mobile-only {
+      z-index: constants.$drawer-z-index-mobile;
+    }
   }
 
   &.drawer-global {
     @include desktop-only {
       border-inline-start: 1px solid awsui.$color-border-layout;
     }
+  }
+
+  &.drawer-hidden {
+    display: none;
   }
 
   > .drawer-content-container {
